[project]
name = "comfyui-krea2blockswap"
description = "Dynamic block swap for Krea 2. Offloads transformer blocks to RAM to run on low-VRAM GPUs without quality loss."
version = "1.0.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/olob0/ComfyUI-Krea2BlockSwap"

[tool.comfy]
PublisherId = "lobo"
DisplayName = "ComfyUI-Krea2BlockSwap"
Icon = ""
